# Spoticry_1

./: .gitignore  README.md
backend/: Cargo.toml
backend/data/: library.json  playlists.json
backend/src/: error.rs  main.rs
backend/src/cli/: commands.rs
backend/src/controllers/: mod.rs  playlist_controller.rs  song_controller.rs
backend/src/domain/: playlist.rs  song.rs
backend/src/network/: handler.rs  mod.rs  protocol.rs  server.rs  stream.rs
backend/src/repositories/: file_repository.rs
backend/src/services/: mod.rs  playlist_service.rs  song_service.rs
backend/src/states/: app_state.rs
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: LibraryView.jsx  Player.jsx  PlaylistsView.jsx  Sidebar.jsx
frontend/src/hooks/: usePlayer.js
frontend/src/services/: api.js  socket.js  storage.js
